--- a/ACCTOnlineLibraryManagementSystem/Content/Site.css
+++ b/ACCTOnlineLibraryManagementSystem/Content/Site.css
@@ -37,7 +37,11 @@ text-align: center;
      top:10px; 
 }
 
-
+.span12{
+    -moz-box-shadow: 0 0 2px black;
+    -webkit-box-shadow: 0 0 2px black;
+    box-shadow: 0 0 2px black;
+}
 
 a.changelink { color: #0000ff }
 a.changelink:active { color: #666666 }
