--- a/ACCTOnlineLibraryManagementSystem/Views/Home/Index.cshtml
+++ b/ACCTOnlineLibraryManagementSystem/Views/Home/Index.cshtml
@@ -30,12 +30,12 @@
                         <form role="form">
                             <div class="col-md-8">
                                 <div class="form-group">
-                                    <input type="email" class="form-control" id="search" placeholder="Search...">
+                                    <input type="email" class="form-control" id="search" placeholder="Search by Book Name..">
                                 </div>
                             </div>
                             
                             <div class="col-md-4 ">
-                                <button type="submit" class="btn btn-default btn-success ">Search</button>
+                                @Html.ActionLink("Search", "StudentRegistration", "Account", null, new {@class = "btn btn-success btn-large"})
                             </div>
                         </form>
                     </div>
